--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
           tabindex="0"
           class="map">
       </iframe><p class="font-1">Address</p><p class="font-2">3481 Melrose Avenue,</p><p class="font-2"> Beverly Hills, CA 90210, USA</p><p class="font-1">(123) 456-7890</p><p class="font-1">name@example.com</p>
+      <i class="fab fa-facebook"></i>
+      <i class="fab fa-twitter-square"></i>
       </div>
     </div>
     <div class="col-xs-12 col-md-4"><div class="background-1"><p class="font-3">Contact Us</p><p class="font-2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
